err/dockyard.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/auth'...
Listing './lib/python3.5/site-packages/docker/ssladapter'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker/utils/ports'...
Listing './lib/python3.5/site-packages/docker_py-1.10.6.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/dockyard'...
Listing './lib/python3.5/site-packages/dockyard/core'...
Compiling './lib/python3.5/site-packages/dockyard/core/command_line_interpreter.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/command_line_interpreter.py", line 60
    print "Unable to find a command interpreter for [%s]" % module
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockyard/core/lib'...
Compiling './lib/python3.5/site-packages/dockyard/core/lib/dict2table.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/lib/dict2table.py", line 84
    print format_as_table(data,
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockyard/core/lib/dns.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/lib/dns.py", line 12
    print "$ %s" % cmd
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dockyard/core/lib/docker_wrapper.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/lib/docker_wrapper.py", line 17
    print format_as_table(self.dockerClient.images(), headers, headers)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockyard/core/lib/dockyard.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/lib/dockyard.py", line 62
    print format_as_table(activeDockyardsDict, dockyardHeaders, dockyardHeaders)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockyard/core/lib/util.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/lib/util.py", line 8
    print "$ %s" % cmd
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dockyard/core/lib/vagrant_wrapper.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/lib/vagrant_wrapper.py", line 20
    print "."
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockyard/core/plugin_docker'...
Compiling './lib/python3.5/site-packages/dockyard/core/plugin_docker/command_interpreter.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/plugin_docker/command_interpreter.py", line 27
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockyard/core/plugin_dockyard'...
Listing './lib/python3.5/site-packages/dockyard/core/plugin_stack'...
Compiling './lib/python3.5/site-packages/dockyard/core/plugin_stack/command_interpreter.py'...
***   File "./lib/python3.5/site-packages/dockyard/core/plugin_stack/command_interpreter.py", line 18
    print "waiting for Vagrant box.."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockyard/core/test'...
Listing './lib/python3.5/site-packages/dockyard-0.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_vagrant-0.5.15.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vagrant'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
